--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -1191,6 +1191,113 @@ def removeDuplicates(nums: List[int], k) -> int:
 ```
 
 
+### 区域和检索—数组可修改
+
+[307. 区域和检索 - 数组可修改 - 力扣（LeetCode）](https://leetcode.cn/problems/range-sum-query-mutable/description/)
+
+给定一个数组 `nums` ，完成两类查询。
+
+1. 其中一类查询要求 **更新** 数组 `nums` 下标对应的值
+2. 另一类查询要求返回数组 `nums` 中索引 `left` 和索引 `right` 之间（ **包含** ）的nums元素的 **和** ，其中 `left <= right`
+
+由于存在数据的更新，每一次更新都需要更新前缀和，使得前缀和无法简化操作。
+
+可以考虑将数组分块，如果分成 $\sqrt{n}$ 个块，每次更新时只更新某个块的前缀和，这样做无论是初始化、更新还是求和，都会比较麻烦。因此可以直接对每一块求和，这样在更新时只需更新一个数，在求和时也只要考虑两端的求和，比较方便，并且节约空间。
+
+```python
+class NumArray:
+
+    def __init__(self, nums: List[int]):
+        block_size = int(len(nums) ** 0.5)
+        block_num = len(nums) // block_size + 1
+        self.block_size = block_size
+        self.sums = [0] * block_num
+        self.nums = nums
+        for i, n in enumerate(nums):
+            self.sums[i // block_size] += n
+    
+    def update(self, index: int, val: int) -> None:
+
+        block_idx = index // self.block_size
+        self.sums[block_idx] += val - self.nums[index]
+        self.nums[index] = val
+
+    def sumRange(self, left: int, right: int) -> int:
+        lbi = left // self.block_size
+        rbi = right // self.block_size
+        if lbi == rbi:  # 如果left，right处于同一块
+            return sum(self.nums[left:right+1])
+        s = 0
+        for i in range(lbi+1, rbi):
+            s += self.sums[i]
+        
+        s += sum(self.nums[left: (lbi+1) * self.block_size])
+        s += sum(self.nums[rbi * self.block_size: right+1])
+        
+        return s
+```
+
+
+该问题还可以使用线段树解决，线段树是一个二叉树，每个节点保存数组 `nums` 在区间 `[s,e]` 的最小值、最大值或者总和等信息。线段树可以用堆来实现。假设根结点的下标为 0，如果一个结点在数组的下标为 node，那么它的左子结点下标为 node×2+1，右子结点下标为 node×2+2。
+
+建树时，结点node 保存数组 `nums` 在区间 `[s,e]` 的总和。当 `s=e` 时，结点 `node` 是叶子节点，保存的值为 `nums[s]`。当 `s<e` 时，结点 `node` 的左子结点保存区间 $\left[ {s,\left\lfloor {{{s + e} \over 2}} \right\rfloor } \right]$ 的总和，右子结点保存区间$\left[ {\left\lfloor {{{s + e} \over 2}} \right\rfloor  + 1,e} \right]$ 的总和，那么结点 `node` 保存的值等于它的两个子结点保存的值之和。
+
+修改`nums[index]` 时，找到对应区间 `[index, index]` 的叶子结点，直接修改叶子结点为 val，并自下而上地更新父节点的值。
+
+范围求和时，我们将区间 `[left,right]` 拆成多个结点对应的区间。如果结点 node 对应的区间与 `[left,right]` 相同，可以直接返回该结点的值，即当前区间和。如果结点 node 对应的区间与 `[left,right]` 不同，设左子结点对应的区间的右端点为 m，那么将区间 `[left,right]` 沿点 m 拆成两个区间，分别计算左子结点和右子结点。
+
+```python
+class NumArray:
+
+    def __init__(self, nums: List[int]):
+        n = len(nums)
+        self.n = n
+        self.seg = [0] * (n * 4)
+        self.build(nums, 0, 0, n - 1)
+        
+    def build(self, nums, node, s, e):
+        if s == e:
+            self.seg[node] = nums[s]
+            return
+        m = s + (e - s) // 2
+        self.build(nums, node * 2 + 1, s, m)
+        self.build(nums, node * 2 + 2, m+1, e)
+        self.seg[node] = self.seg[node * 2 + 1] + self.seg[node * 2 + 2]
+    
+    def change(self, index, val, node, s, e):
+        if s == e:
+            self.seg[node] = val
+            return
+        m = s + (e - s) // 2
+        if index <= m:
+            self.change(index, val, node * 2 + 1, s, m)
+        else:
+            self.change(index, val, node * 2 + 2, m+1, e)
+        self.seg[node] = self.seg[node * 2 + 1] + self.seg[node * 2 + 2]
+
+    def range(self, left, right, node, s, e):
+        if left == s and right == e:
+            return self.seg[node]
+        m = s + (e - s) // 2
+        if right <= m:
+            return self.range(left, right, node * 2 + 1, s, m)
+        if left > m:
+            return self.range(left, right, node * 2 + 2, m+1, e)
+        
+        return self.range(left, m, node * 2 + 1, s, m) + self.range(m+1, right, node*2+2, m+1, e)
+
+
+    def update(self, index: int, val: int) -> None:
+        self.change(index, val, 0, 0, self.n - 1)
+
+    def sumRange(self, left: int, right: int) -> int:    
+        return self.range(left, right, 0, 0, self.n - 1)
+```
+
+此外还有树状数组的解法
+
+
+
 ## 哈希问题
 
 哈希最大的特点是可以实现常数时间搜索、插入和删除，主要用于实现不相等的元素，如键值对。
@@ -6311,6 +6418,62 @@ def solveSudoku(board: List[List[str]]) -> None:
 	solve(0, 0)
 ```
 
+
+### 累加数
+
+[306. 累加数 - 力扣（LeetCode）](https://leetcode.cn/problems/additive-number/)
+
+**累加数** 是一个字符串，组成它的数字可以形成累加序列。一个有效的 **累加序列** 必须 **至少** 包含 3 个数。除了最开始的两个数以外，序列中的每个后续数字必须是它之前两个数字之和。给你一个只包含数字 `'0'-'9'` 的字符串，编写一个算法来判断给定输入是否是 **累加数** 。如果是，返回 `true` ；否则，返回 `false` 。
+
+由于字符串可以以多种形式划分，因此可以采用回溯法解决
+
+首先需要尝试确定最开始的两个数
+
+```python
+def isAdditiveNumber(self, num: str) -> bool:
+	if len(num) < 3: return False
+	n = len(num)
+	ans = [False]
+	def dfs(idx, first, second, s):  # idx 为一个数的结尾索引，s 为一个数的开始索引
+		if idx >= n:
+			return
+		if ans[0]:   # 减少不必要的递归
+			return
+		
+		if first == "":  # 如果第一个数还没有确定
+			if idx <= n // 2:   # 第一个数的长度不能超过一半
+				dfs(idx+1, first, second, s)
+			
+			first = num[s:idx+1]
+			if len(first) > 1 and first[0] == "0":
+				return
+			dfs(idx+1, first, second, idx+1)
+		elif second == "":   # 如果第二个数还没有确定
+			if idx <= n // 2:
+				dfs(idx+1, first, second, s)
+			second = num[s:idx+1]
+			if len(second) > 1 and second[0] == "0":
+				return
+			# 第三个数的长度应该是前两个数长度较大的一个
+			width = max(len(second), len(first)) 
+			dfs(idx+width, first, second, idx+1)
+		else:   # 确定第三个数
+			third = num[s: idx + 1]
+			if len(third) > 1 and third[0] == "0":
+				return
+			width = max(len(first), len(second))
+			if width <= len(third) <= width + 1:
+				if int(third) == int(first) + int(second):
+					if idx == n - 1:
+						ans[0] = True
+					width = max(width, len(third))
+					dfs(idx + width, second, third, idx+1)
+				else:
+					dfs(idx + 1, first, second, s)
+	
+	dfs(0, "", "", 0)
+	return ans[0]
+```
 
 ### 国王旅行问题
 
@@ -14540,10 +14703,51 @@ def longestSubstring(s: str, k: int) -> int:
 
 ### 为运算表达式设计优先级
 
-[241. 为运算表达式设计优先级 - 力扣（LeetCode）](https://leetcode.cn/problems/different-ways-to-add-parentheses/solutions/)
+[241. 为运算表达式设计优先级 - 力扣（LeetCode）](https://leetcode.cn/problems/different-ways-to-add-parentheses/description/)
 
+该问题可以通过分治的方法解决。首先先解析字符串，将数字和操作符分别放在一个数组中。
 
+考虑每个符号左右的可能的元素
 
+```python
+def diffWaysToCompute(expression: str) -> List[int]:
+	ops = []
+	nums = []
+	num = 0
+	for e in expression:
+		if e in ['*', '-', '+']:
+			nums.append(num)
+			num = 0
+			ops.append(e)
+		else:
+			num *= 10
+			num = num + int(e)
+	nums.append(num)
+	
+	nop = len(ops)
+	
+	def dfs(l, r):
+		if l == r:
+			return [nums[l]] # 获得操作数
+		
+		res = []
+		# 分治，分成左右两个部分
+		for i in range(l, r):
+			left = dfs(l, i)
+			right = dfs(i+1, r)
+
+			for x in left:
+				for y in right:
+					if ops[i] == "+":
+						res.append(x + y)
+					elif ops[i] == "-":
+						res.append(x - y)
+					else:
+						res.append(x * y)
+		return res                           
+	ans = dfs(0, nop)
+	return ans
+```
 
 ## 分支定界
 
